--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <!-- Панель навігації -->
 
-    <header class="page-header">
+    <!-- <header class="page-header">
       <div class="container">
         <div class="main-nav main-nav__container">
           <nav class="main-nav__navi">
@@ -63,12 +63,12 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <!-- Головна сторінка -->
-    <main>
-      <!-- Герой -->
-      <section class="hero">
+    <!-- <main> -->
+    <!-- Герой -->
+    <!-- <section class="hero">
         <div class="overlay">
           <div class="hero__container container">
             <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
@@ -86,10 +86,10 @@
                   <form class="modal-form">
                     <b class="modal-form__title"
                       >Залиште свої дані, ми вам передзвонимо</b
-                    >
-                    <!-- дані відвідувача -->
+                    > -->
+    <!-- дані відвідувача -->
 
-                    <label class="modal-form__group">
+    <!-- <label class="modal-form__group">
                       <span class="modal-form__label">Ім'я</span>
                       <input
                         class="modal-form__input"
@@ -133,22 +133,22 @@
                         rows="7"
                         placeholder="Введіть текст"
                       ></textarea>
-                    </label>
+                    </label> -->
 
-                    <!-- політика прватності -->
+    <!-- політика прватності -->
 
-                    <div class="modal-form__policy">
+    <!-- <div class="modal-form__policy">
                       <label class="modal-form__policy-label">
                         <input
                           class="modal-form__checkbox visually-hidden"
                           type="checkbox"
-                        />
+                        /> -->
 
-                        <!-- <svg class="modal-form__checkbox-vector" width="16" height="15">
+    <!-- <svg class="modal-form__checkbox-vector" width="16" height="15">
                           <use href="./images/icons.svg#icon-Vector"></use>
                         </svg> -->
 
-                        <span class="modal-form__heckbox-custom"></span>
+    <!-- <span class="modal-form__heckbox-custom"></span>
 
                         <svg
                           class="modal-form__checkbox-check"
@@ -174,122 +174,122 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <!-- Переваги -->
-      <section class="advantages section">
+    <!-- Переваги -->
+    <section class="advantages section">
+      <div class="container">
+        <h2 class="section__title visually-hidden">Переваги</h2>
+        <!-- заголовок скриється в css   -->
+        <ul class="advantages-list list">
+          <!-- <ul class="advantages-list list grid"> -->
+          <li class="advantages-list__item item">
+            <div class="advantages-list__image">
+              <!-- <li class="item grid-item"> -->
+              <svg class="advantages-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#antenna"></use>
+              </svg>
+            </div>
+            <h3 class="advantages-list__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li class="advantages-list__item item">
+            <!-- <li class="item grid-item"> -->
+            <div class="advantages-list__image">
+              <svg class="advantages-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#clock"></use>
+              </svg>
+            </div>
+            <h3 class="advantages-list__title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li class="advantages-list__item item">
+            <!-- <li class="item grid-item"> -->
+            <div class="advantages-list__image">
+              <svg class="advantages-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#diagram"></use>
+              </svg>
+            </div>
+            <h3 class="advantages-list__title">ПЛАНУВАННЯ</h3>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li class="advantages-list__item item">
+            <!-- <li class="item grid-item"> -->
+            <div class="advantages-list__image">
+              <svg class="advantages-list__icon" width="70" height="70">
+                <use href="./images/icons.svg#astronaut"></use>
+              </svg>
+            </div>
+            <h3 class="advantages-list__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- напрямки діяльності -->
+    <section class="section">
+      <div class="directions container">
+        <h2 class="section__title">Чим ми займаємося</h2>
+        <ul class="directions__list list">
+          <!-- <ul class="direction-list list grid"> -->
+          <li class="directions__item item">
+            <!-- <li class="item grid-item"> -->
+            <img
+              class="directions__image"
+              src="./images/directions/workplace-1.jpg"
+              alt="Фото відділу розробки"
+              width="370"
+              height="294"
+            />
+            <p class="directions__text">Десктопні додатки</p>
+          </li>
+          <li class="directions__item item">
+            <!-- <li class="item grid-item"> -->
+            <img
+              class="directions__image"
+              src="./images/directions/workplace-2.jpg"
+              alt="Фото відділу оптимізації"
+              width="370"
+              height="294"
+            />
+            <p class="directions__text">Мобільні додатки</p>
+          </li>
+          <li class="directions__item item">
+            <!-- <li class="item grid-item"> -->
+            <img
+              class="directions__image"
+              src="./images/directions/workplace-3.jpg"
+              alt="Фото відділу дизайну"
+              width="370"
+              height="294"
+            />
+            <p class="directions__text">Дизайнерські рішення</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- команда -->
+
+    <!-- <section class="team section">
         <div class="container">
-          <h2 class="section__title visually-hidden">Переваги</h2>
-          <!-- заголовок скриється в css   -->
-          <ul class="advantages__list list">
-            <!-- <ul class="advantages-list list grid"> -->
-            <li class="advantages__item item">
-              <div class="advantages__image">
-                <!-- <li class="item grid-item"> -->
-                <svg class="advantages__icon" width="70" height="70">
-                  <use href="./images/icons.svg#antenna"></use>
-                </svg>
-              </div>
-              <h3 class="advantages__title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p>
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
-              </p>
-            </li>
-            <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
-              <div class="advantages__image">
-                <svg class="advantages__icon" width="70" height="70">
-                  <use href="./images/icons.svg#clock"></use>
-                </svg>
-              </div>
-              <h3 class="advantages__title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p>
-                Завдання організації, особливо рамки і місце навчання кадрів
-                тягне у себе.
-              </p>
-            </li>
-            <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
-              <div class="advantages__image">
-                <svg class="advantages__icon" width="70" height="70">
-                  <use href="./images/icons.svg#diagram"></use>
-                </svg>
-              </div>
-              <h3 class="advantages__title">ПЛАНУВАННЯ</h3>
-              <p>
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
-            </li>
-            <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
-              <div class="advantages__image">
-                <svg class="advantages__icon" width="70" height="70">
-                  <use href="./images/icons.svg#astronaut"></use>
-                </svg>
-              </div>
-              <h3 class="advantages__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p>
-                Значимість цих проблем настільки очевидна, що реалізація
-                планових завдань.
-              </p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- напрямки діяльності -->
-      <section class="section">
-        <div class="directions container">
-          <h2 class="section__title">Чим ми займаємося</h2>
-          <ul class="directions__list list">
-            <!-- <ul class="direction-list list grid"> -->
-            <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
-              <img
-                class="directions__image"
-                src="./images/directions/workplace-1.jpg"
-                alt="Фото відділу розробки"
-                width="370"
-                height="294"
-              />
-              <p class="directions__text">Десктопні додатки</p>
-            </li>
-            <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
-              <img
-                class="directions__image"
-                src="./images/directions/workplace-2.jpg"
-                alt="Фото відділу оптимізації"
-                width="370"
-                height="294"
-              />
-              <p class="directions__text">Мобільні додатки</p>
-            </li>
-            <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
-              <img
-                class="directions__image"
-                src="./images/directions/workplace-3.jpg"
-                alt="Фото відділу дизайну"
-                width="370"
-                height="294"
-              />
-              <p class="directions__text">Дизайнерські рішення</p>
-            </li>
-          </ul>
-        </div>
-      </section>
-
-      <!-- команда -->
-
-      <section class="team section">
-        <div class="container">
-          <h2 class="section__title">Наша команда</h2>
-          <!-- <ul class="list grid"> -->
-          <ul class="team__list list">
-            <!-- <li class="team__member grid-item"> -->
-            <li class="team__member">
+          <h2 class="section__title">Наша команда</h2> -->
+    <!-- <ul class="list grid"> -->
+    <!-- <ul class="team__list list"> -->
+    <!-- <li class="team__member grid-item"> -->
+    <!-- <li class="team__member">
               <img
                 class="team__image"
                 src="./images/team/teammember-1.jpg"
@@ -356,9 +356,9 @@
                 </ul>
               </div>
             </li>
-            <li class="team__member">
-              <!-- <li class="team__member grid-item"> -->
-              <img
+            <li class="team__member"> -->
+    <!-- <li class="team__member grid-item"> -->
+    <!-- <img
                 class="team__image"
                 src="./images/team/teammember-2.jpg"
                 alt="Ольга Рєпіна-Frontend Developer"
@@ -424,9 +424,9 @@
                 </ul>
               </div>
             </li>
-            <li class="team__member">
-              <!-- <li class="team__member grid-item"> -->
-              <img
+            <li class="team__member"> -->
+    <!-- <li class="team__member grid-item"> -->
+    <!-- <img
                 class="team__image"
                 src="./images/team/teammember-3.jpg"
                 alt="Микола Тарасов-Marketing"
@@ -491,9 +491,9 @@
                   </li>
                 </ul>
               </div>
-            </li>
-            <!-- <li class="team__member grid-item"> -->
-            <li class="team__member">
+            </li> -->
+    <!-- <li class="team__member grid-item"> -->
+    <!-- <li class="team__member">
               <img
                 class="team__image"
                 src="./images/team/teammember-4.jpg"
@@ -562,11 +562,11 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
-      <!-- постійні клієнти -->
+    <!-- постійні клієнти -->
 
-      <section class="clients section">
+    <!-- <section class="clients section">
         <div class="container">
           <h2 class="section__title">Постійні клієнти</h2>
           <ul class="clients__list list">
@@ -652,10 +652,10 @@
           </ul>
         </div>
       </section>
-    </main>
+    </main> -->
 
     <!-- footer -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__container container">
         <div class="footer__address">
           <a href="./index.html" class="logo logo__footer"
@@ -754,5 +754,7 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+  </body>
+</html> -->
   </body>
 </html>
