--- a/index.html
+++ b/index.html
@@ -341,18 +341,36 @@
           <ul class="team__list list">
             <!-- <li class="team__member grid-item"> -->
             <li class="team__member">
-              <img
-                class="team__image"
-                srcset="
-                  ./images/team/team-1_sm.jpg    1x,
-                  ./images/team/team-1_sm@2x.jpg 2x
-                "
-                src="./images/team/team-1_sm.jpg"
-                alt="Ігор Дем'яненко-Product Designer"
-                width="450"
-                height="460"
-                loading="lazy"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-1_lg.jpg    1x,
+                    ./images/team/team-1_lg@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-1_md.jpg    1x,
+                    ./images/team/team-1_md@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team/team-1_sm.jpg    1x,
+                    ./images/team/team-1_sm@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <img
+                  class="team__image"
+                  src="./images/team/team-1_sm.jpg"
+                  alt="Ігор Дем'яненко-Product Designer"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+              /></picture>
               <div class="member__group">
                 <h3 class="member__title">Ігор Дем'яненко</h3>
                 <p class="member__position">Product Designer</p>
@@ -412,14 +430,37 @@
                 </ul>
               </div>
             </li>
-            <!-- <li class="team__member">
-                            <img
-                class="team__image"
-                src="./images/team/team-2.jpg"
-                alt="Ольга Рєпіна-Frontend Developer"
-                width="270"
-                height="260"
-              />
+            <li class="team__member">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-2_lg.jpg    1x,
+                    ./images/team/team-2_lg@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-2_md.jpg    1x,
+                    ./images/team/team-2_md@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team/team-2_sm.jpg    1x,
+                    ./images/team/team-2_sm@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <img
+                  class="team__image"
+                  src="./images/team/team-2_sm.jpg"
+                  alt="Ігор Дем'яненко-Product Designer"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+              /></picture>
               <div class="member__group">
                 <h3 class="member__title">Ольга Рєпіна</h3>
                 <p class="member__position">Frontend Developer</p>
@@ -480,13 +521,36 @@
               </div>
             </li>
             <li class="team__member">
-                           <img
-                class="team__image"
-                src="./images/team/teammember-3.jpg"
-                alt="Микола Тарасов-Marketing"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-3_lg.jpg    1x,
+                    ./images/team/team-3_lg@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-3_md.jpg    1x,
+                    ./images/team/team-3_md@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team/team-3_sm.jpg    1x,
+                    ./images/team/team-3_sm@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <img
+                  class="team__image"
+                  src="./images/team/team-3_sm.jpg"
+                  alt="Ігор Дем'яненко-Product Designer"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+              /></picture>
               <div class="member__group">
                 <h3 class="member__title">Микола Тарасов</h3>
                 <p class="member__position">Marketing</p>
@@ -546,14 +610,37 @@
                 </ul>
               </div>
             </li>
-                       <li class="team__member">
-              <img
-                class="team__image"
-                src="./images/team/teammember-4.jpg"
-                alt="Михайло Єрмаков-UI Designer"
-                width="270"
-                height="260"
-              />
+            <li class="team__member">
+              <picture>
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="
+                    ./images/team/team-4_lg.jpg    1x,
+                    ./images/team/team-4_lg@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(min-width: 768px)"
+                  srcset="
+                    ./images/team/team-4_md.jpg    1x,
+                    ./images/team/team-4_md@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <source
+                  media="(max-width: 767px)"
+                  srcset="
+                    ./images/team/team-4_sm.jpg    1x,
+                    ./images/team/team-4_sm@2x.jpg 2x
+                  "
+                  type="image/jpg" />
+                <img
+                  class="team__image"
+                  src="./images/team/team-4_sm.jpg"
+                  alt="Ігор Дем'яненко-Product Designer"
+                  width="450"
+                  height="460"
+                  loading="lazy"
+              /></picture>
               <div class="member__group">
                 <h3 class="member__title">Михайло Єрмаков</h3>
                 <p class="member__position">UI Designer</p>
@@ -612,7 +699,7 @@
                   </li>
                 </ul>
               </div>
-            </li> -->
+            </li>
           </ul>
         </div>
       </section>
