замінює фото на другій сторінці

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,8 +18,6 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <!-- <div class="main-nav main-nav__container"> -->
-        <!-- <nav class="main-nav__navi"> -->
         <nav class="nav">
           <a href="./index.html" class="logo"
             >Web<span class="logo__text logo__text--black">Studio</span></a
@@ -143,12 +141,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-1.jpg"
-                    alt="Веб-сайт 'Технокряк'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-1_lg.jpg    1x,
+                        ./images/portfolio/portfolio-1_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-1_md.jpg    1x,
+                        ./images/portfolio/portfolio-1_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-1_sm.jpg    1x,
+                        ./images/portfolio/portfolio-1_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-1_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -169,12 +190,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-2.jpg"
-                    alt="Дизайн 'Постер New Orlean vs Golden Star'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-2_lg.jpg    1x,
+                        ./images/portfolio/portfolio-2_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-2_md.jpg    1x,
+                        ./images/portfolio/portfolio-2_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-2_sm.jpg    1x,
+                        ./images/portfolio/portfolio-2_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-2_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -194,12 +238,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-3.jpg"
-                    alt="Додаток 'Ресторан Seafood'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-3_lg.jpg    1x,
+                        ./images/portfolio/portfolio-3_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-3_md.jpg    1x,
+                        ./images/portfolio/portfolio-3_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-3_sm.jpg    1x,
+                        ./images/portfolio/portfolio-3_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-3_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -219,12 +286,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-4.jpg"
-                    alt="Маркетинг 'Проєкт Prime'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-4_lg.jpg    1x,
+                        ./images/portfolio/portfolio-4_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-4_md.jpg    1x,
+                        ./images/portfolio/portfolio-4_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-4_sm.jpg    1x,
+                        ./images/portfolio/portfolio-4_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-4_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -244,12 +334,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-5.jpg"
-                    alt="Додаток 'Проєкт Boxes'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-5_lg.jpg    1x,
+                        ./images/portfolio/portfolio-5_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-5_md.jpg    1x,
+                        ./images/portfolio/portfolio-5_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-5_sm.jpg    1x,
+                        ./images/portfolio/portfolio-5_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-5_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -269,12 +382,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-6.jpg"
-                    alt="Веб-сайт 'Inspiration has no Borders'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-6_lg.jpg    1x,
+                        ./images/portfolio/portfolio-6_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-6_md.jpg    1x,
+                        ./images/portfolio/portfolio-6_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-6_sm.jpg    1x,
+                        ./images/portfolio/portfolio-6_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-6_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -294,12 +430,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-7.jpg"
-                    alt="Дизайн 'Видання Limited Edition'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-7_lg.jpg    1x,
+                        ./images/portfolio/portfolio-7_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-7_md.jpg    1x,
+                        ./images/portfolio/portfolio-7_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-7_sm.jpg    1x,
+                        ./images/portfolio/portfolio-7_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-7_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -319,12 +478,35 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-8.jpg"
-                    alt="Маркетинг 'Проєкт LAB'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-8_lg.jpg    1x,
+                        ./images/portfolio/portfolio-8_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-8_md.jpg    1x,
+                        ./images/portfolio/portfolio-8_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-8_sm.jpg    1x,
+                        ./images/portfolio/portfolio-8_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      src="./images/portfolio/portfolio-8_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -344,12 +526,36 @@
             <li class="card__item item">
               <a class="card__link link" href="">
                 <div class="card__img-wrapper">
-                  <img
-                    src="./images/portfolio/portfolio-9.jpg"
-                    alt="Додаток 'Growing Business'"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      media="(min-width: 1200px)"
+                      srcset="
+                        ./images/portfolio/portfolio-9_lg.jpg    1x,
+                        ./images/portfolio/portfolio-9_lg@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="
+                        ./images/portfolio/portfolio-9_md.jpg    1x,
+                        ./images/portfolio/portfolio-9_md@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="
+                        ./images/portfolio/portfolio-9_sm.jpg    1x,
+                        ./images/portfolio/portfolio-9_sm@2x.jpg 2x
+                      "
+                      type="image/jpg" />
+                    <img
+                      class="team__image"
+                      src="./images/portfolio/portfolio-9_sm.jpg"
+                      alt="Ігор Дем'яненко-Product Designer"
+                      width="450"
+                      height="294"
+                      loading="lazy"
+                  /></picture>
                   <div class="card-overlay">
                     <p class="card-overlay__text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
