--- a/index.html
+++ b/index.html
@@ -66,13 +66,17 @@
                 </li>
               </ul>
             </div>
-            <div class="navigation__contacts">
+            <div class="nav__contacts">
               <ul class="contacts list">
                 <li class="contacts__item">
                   <a
                     class="contacts__link contacts__link--size link"
                     href="mailto:info@devstudio.com"
-                    ><svg class="contacts__icon" width="16" height="12">
+                    ><svg
+                      class="contacts__icon contacts__icon--mail"
+                      width="16"
+                      height="12"
+                    >
                       <use href="./images/icons.svg#envelope"></use>
                     </svg>
                     info@devstudio.com</a
@@ -80,7 +84,11 @@
                 </li>
                 <li class="contacts__item">
                   <a class="contacts__link link" href="tel:+38-096-111-11-11"
-                    ><svg class="contacts__icon" width="10" height="16">
+                    ><svg
+                      class="contacts__icon contacts__icon--tel"
+                      width="10"
+                      height="16"
+                    >
                       <use href="./images/icons.svg#smartphone"></use>
                     </svg>
                     +38 096 111 11 11</a
@@ -226,15 +234,13 @@
       </section>
 
       <!-- Переваги -->
+
       <section class="section">
         <div class="container advantages">
           <h2 class="section__title visually-hidden">Переваги</h2>
-          <!-- заголовок скриється в css   -->
           <ul class="advantages__list list">
-            <!-- <ul class="advantages-list list grid"> -->
             <li class="advantages__item item">
               <div class="advantages__image">
-                <!-- <li class="item grid-item"> -->
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#antenna"></use>
                 </svg>
@@ -246,7 +252,6 @@
               </p>
             </li>
             <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
               <div class="advantages__image">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#clock"></use>
@@ -259,7 +264,6 @@
               </p>
             </li>
             <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
               <div class="advantages__image">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#diagram"></use>
@@ -271,7 +275,6 @@
               </p>
             </li>
             <li class="advantages__item item">
-              <!-- <li class="item grid-item"> -->
               <div class="advantages__image">
                 <svg class="advantages__icon" width="70" height="70">
                   <use href="./images/icons.svg#astronaut"></use>
@@ -292,9 +295,7 @@
         <div class="directions container">
           <h2 class="section__title">Чим ми займаємося</h2>
           <ul class="directions__list list">
-            <!-- <ul class="direction-list list grid"> -->
             <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
               <img
                 class="directions__image"
                 src="./images/directions/workplace-1.jpg"
@@ -305,7 +306,6 @@
               <p class="directions__text">Десктопні додатки</p>
             </li>
             <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
               <img
                 class="directions__image"
                 src="./images/directions/workplace-2.jpg"
@@ -316,7 +316,6 @@
               <p class="directions__text">Мобільні додатки</p>
             </li>
             <li class="directions__item item">
-              <!-- <li class="item grid-item"> -->
               <img
                 class="directions__image"
                 src="./images/directions/workplace-3.jpg"
@@ -335,9 +334,7 @@
       <section class="section">
         <div class="container team">
           <h2 class="section__title section__title--distance">Наша команда</h2>
-          <!-- <ul class="list grid"> -->
           <ul class="team__list list">
-            <!-- <li class="team__member grid-item"> -->
             <li class="team__member">
               <picture>
                 <source
